welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: type mismatch;
 found   : Int
 required: java.awt.Color
		T(i)=i+1
                      ^